@@ -215,6 +215,15 @@ around 'set_inflated_columns' => sub {
 
 __PACKAGE__->set_inflator4xz_compressed_scalar(qw(stats));
 
+=head2 composition
+
+An lazy-build attribute representing a composition this result
+curresponds to. 
+
+=cut
+
+__PACKAGE__->create_composition_attribute();
+
 __PACKAGE__->meta->make_immutable;
 1;
 __END__
